preventing autozoom on form on safari

--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,16 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 16px;
 }
 
 form {
   display: block;
   width: 100%;
   padding: 2em;
+}
+input[type="text"] {
+  font-size: inherit;
 }
 h2 {
   width: 100%;
